# datum

./: .gitignore  CREDITS.txt  Cargo.toml  README.md  final-checks-rust  roundtrip.scm  test-rust
.github/workflows/: java-maven-package.yml
doc/: book.toml  roundtrip-input.scm  roundtrip-output.scm
doc/src/: SUMMARY.md  start.md
doc/src/java/: intro.md
doc/src/rust/: core_types.md  ex_calculator.md  intro.md
doc/src/spec/: app_notes.md  appendix_tokenizer_state_machine.md  apx_rationale.md  apx_state_machines.md  impl_notes.md  spec.md  spec_intro.md  spec_main.md  spec_reading.md
examples/rust/calculator/: Cargo.toml
examples/rust/calculator/src/: main.rs
examples/rust/serdetest/: Cargo.toml  example-err.scm  example.scm
examples/rust/serdetest/src/: main.rs
java/: README.md  pom.xml
java/src/main/java/datum/: DatumCharClass.java  DatumDecToLambdaVisitor.java  DatumDecodingVisitor.java  DatumEncodingProxyVisitor.java  DatumEncodingVisitor.java  DatumExpectListVisitor.java  DatumInvalidVisitor.java  DatumKVDHVisitor.java  DatumKVDVisitor.java  DatumODec1Visitor.java  DatumODecVisitor.java  DatumPositionedException.java  DatumProxyVisitor.java  (+12 more)
rust/: .gitignore  Cargo.toml  README.md  YANK_HISTORY.md  gen-exhaustive-build.rs
rust/src/: array.rs  ast.rs  async_unwrap.rs  atom.rs  byte_decoder.rs  char_classes.rs  core_types.rs  decoder.rs  error.rs  errors.rs  lib.rs  pipe.rs  pipe_buf.rs  pipe_vdp.rs  pipeline.rs  pipelines.rs  queue.rs  sealant.rs  tests.rs  token.rs  token_core.rs  unary.rs  writer.rs
rust/src/de/: deserializer.rs  mod.rs  seqmaproot.rs
rust/src/serde/: de_tests.rs  mod.rs  ser_tests.rs  tests.rs
rust/src/serde/de/: deserializer.rs  mod.rs  seqmaproot.rs
rust/src/serde/ser/: mod.rs  seqmaproot.rs  serializer.rs
rust/src/tests/: mod.rs
spec/: specification.md
(+7 files in other folders)
