[package]
name = "datum-serdetest"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
# we need alloc for now for the iterator :(
datum = { path = "../../../rust", default-features = false, features = ["_experimental", "serde", "detailed_errors"] }
serde = { version = "1.0.209", default-features = false, features = ["std", "derive"] }
